<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exitTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/exit_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exitDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/exit_description"
        android:textSize="16sp" />

    <Button
        android:id="@+id/confirmExitButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/button_close" />

    <Button
        android:id="@+id/breakExitButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/button_break" />

</LinearLayout>
